--- a/src/global.css
+++ b/src/global.css
@@ -32,7 +32,7 @@ main {
 	padding: 30px 0;
 }
 
-main .active {
+aside .active {
 	border-left: 7px solid blue;
 	transform: translateX(0);
 }
@@ -56,6 +56,26 @@ footer {
 footer span {
 	font-weight: bold;
 }
+
+/* Memory Class */
+
+.page div .active {
+	transform: scale(1);
+}
+
+.page div .correct {
+	transform: scale(1);
+	width: 100%;
+	height: 100%;
+	box-shadow: 0px 0px 10px 5px greenyellow;
+}
+
+.page div .wrong {
+	transform: scale(1);
+	box-shadow: 0px 0px 20px 10px red;
+}
+
+/* Media Queries */
 
 @media (max-width: 800px) {
 	.wrapper {
